--- a/ManagementPortalApp/Views/Settings/ApiEndPoint.cshtml
+++ b/ManagementPortalApp/Views/Settings/ApiEndPoint.cshtml
@@ -1,6 +1,6 @@
 ﻿@inject ManagementPortalApp.Models.Session.Sessions Sessions_
 @{
-    ViewBag.Title = "API Let & See";
+    ViewBag.Title = "API Latency";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -20,7 +20,7 @@
     <div class="col-12">
         <div class="card">
             <div class="card-header d-flex">
-                <h4 class="mb-0">Manage API Let & See</h4>
+                <h4 class="mb-0">Manage API Latency</h4>
             </div>
             <div class="card-body">
                 <form id="apiEndpointsForm" name="apiEndpointsForm" method="post" autocomplete="off">
